# hubu-agent

./: .gitignore  .gitignore_README.md  GIT_QUICK_GUIDE.md  README.md  START_HERE.txt  pyproject.toml  start_backend.bat  start_frontend.bat
backend/: .env.example  README.md  pyproject.toml  test_dialog.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py
backend/app/auth/: __init__.py  auth_jwt.py  config.py  exceptions.py
backend/app/callbacks/: __init__.py  usage_metadata_callback.py
backend/app/core/: logging.py
backend/app/database/: engine.py  init_db.py  session.py
backend/app/middleware/: user_context.py
backend/app/prompts/: __init__.py  chat_agent.md  coder.md  memory_agent.md  researcher.md  reviewer.md  skill.md  summary_agent.md  supervisor.md
backend/app/schemas/: auth.py  chat.py  dialog.py  embedding_provider.py  export.py  knowledge.py  llm_provider.py  memory.py  user_agent.py
backend/app/services/: auth_service.py  export_service.py  (+4 more)
backend/test/: init_rag_data.py  output_result.txt  test_auth.py  test_chart_generator.py  test_code_exec.py  test_code_runner.py  test_db.py  test_doc_parser.py  test_embedding.py  test_file_manager.py  test_get_weather.py  test_history_manager.py  test_knowledge_list.py  test_knowledge_search.py  test_llm_basic.py  test_memory.py  test_milvus.py  test_package_installer.py  test_redis.py  test_report_generator.py  test_skill_loader.py  test_skill_loader_detail.py  test_skill_loader_output.py  test_token_counter.py  test_tools.py  test_web_scraper.py  test_web_search.py
(+197 files in other folders)
