[project]
name = "app"
version = "0.1.0"
description = "Hubu Agent Backend"
authors = [
    {name = "互补所短",email = "1879334164@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.121.0,<0.122.0",
    "uvicorn>=0.34.0,<0.35.0",
    "pydantic>=2.10.6,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "loguru>=0.7.3,<0.8.0",
    "langchain>=1.2.15,<2.0.0",
    "langchain-community>=0.4.1,<0.5.0",
    "langchain-openai>=1.0.2,<2.0.0",
    "sqlmodel>=0.0.27,<0.1.0",
    "pymysql>=1.1.2,<2.0.0",
    "aiomysql>=0.3.2,<0.4.0",
    "redis>=7.0.1,<8.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "cryptography (>=48.0.0,<49.0.0)",
    "numpy>=1.24.0,<2.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "pymilvus>=2.4.0,<3.0.0",
    "unstructured (>=0.22.28,<0.23.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "dashscope (>=1.25.18,<2.0.0)",
    "pypdf (>=6.11.0,<7.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "jq (>=1.11.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "chardet (>=7.4.3,<8.0.0)",
    "pyjwt>=2.8.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0.1,<4.1.0",  # 固定版本以兼容 passlib
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "email-validator>=2.1.0,<3.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "app"}]
